# restaurant-agent

./: .env.example  .gitignore  README.md  THREADS_SEARCH_GUIDE.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: foodie-agent.md
.claude/resources/: expert_prompt_template.txt  sample_posts.txt  social_posts_by_store.txt  vibe_tag_rules.md
.claude/skills/: candidate-search.md  character-simulation.md  cost-guard.md  hard-constraint-filter.md  intent-parser.md  ranker.md  reason-composer.md  reservation-checker.md  review-fetcher.md  scenario-guide.md  social-text-adapter.md  vibe-summarizer.md
.demo/: 功能1-挑嘴朋友聚餐.json  功能2-有酒有飯餐酒館.json  功能3-預算有限但要體面.json  功能4-可以常去不需訂位.json  情境1-久別重逢長聊.json  情境2-帶外國朋友私房台味.json  情境3-帶長輩早鳥晚餐.json  情境4-曖昧初次約飯.json
.github/: copilot-instructions.md
.github/agents/: foodie-agent.agent.md
examples/: sample_posts.txt  social_posts_by_store.txt  test_cases.md
prompts/: expert_prompt_template.txt
src/restaurant_agent/: cli.py  (+7 more)
tests/: test_agent_orchestrator.py  test_expert_prompt.py  test_google_maps_reviews.py  test_maps_guardrails.py  test_social_text_adapter.py  test_threads_scraper.py  test_vibe_summarizer.py
tools/: __init__.py  agent_orchestrator.py  candidate_search.py  cli.py  cost_guard.py  env_loader.py  expert_prompt.py  google_maps_parser.py  hard_constraint_filter.py  instagram_fetcher.py  intent_parser.py  maps_guardrails.py  ranker.py  reason_composer.py  reservation_checker.py  review_fetcher.py  social_text_adapter.py  threads_scraper.py  types.py  vibe_skill.py  vibe_summarizer.py
(+23 files in other folders)
