[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-agent"
version = "0.1.0"
description = "Foodie Agent — skill-based restaurant recommendation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instagrapi>=2.0",
    "playwright>=1.58.0",
]

[project.scripts]
restaurant-agent = "tools.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
